Moves OGNL core code under ognl module and renames the parent into ognl-parent